Fixed navbar charms alignment and DOM structure

--- a/app/assets/stylesheets/bootstrap-tweaks.scss
+++ b/app/assets/stylesheets/bootstrap-tweaks.scss
@@ -26,7 +26,6 @@ html {
 
   .navbar-charms {
     float: right;
-    margin-right: -15px;
     margin-left: 15px;
 
     .nav.navbar-nav {
